--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </h2>
 
     <div class="container2">
-        <div class="box a"></div>
-        <div class="box b"></div>
-        <div class="box c"></div>
-        <div class="box d"></div>
-        <div class="box e"></div>
-        <div class="box f"></div>
+        <div class="box a"><p>Poesias</p></div>
+        <div class="box b"><p>Cinema</p></div>
+        <div class="box c"><p>Fotografia</p></div>
+        <div class="box d"><p>Pintura</p></div>
+        <div class="box e"><p>Jogos</p></div>
+        <div class="box f"><p>Musica</p></div>
 
     </div>  
 
